--- a/pom.xml
+++ b/pom.xml
@@ -49,9 +49,8 @@
         <dependency>
             <groupId>org.apache.pdfbox</groupId>
             <artifactId>pdfbox</artifactId>
-            <version>2.0.19</version>
+            <version>3.0.0-RC1</version>
         </dependency>
-
     </dependencies>
 
 
